# bcs-thesis

./: .env.example  .gitignore  Cargo.toml  README.md
check-attack/: Cargo.toml
check-attack/src/: canary.rs  candidate_set.rs  driver.rs  knowledge.rs  lib.rs  main.rs  models.rs  sweep.rs  targets.rs
check-attack/src/attacks/: attribute.rs  membership.rs  mod.rs  node.rs  singling.rs
check-attack/tests/: driver.rs
check-attack/tests/common/: mod.rs
check-value/: Cargo.toml
cli-render/: Cargo.toml
database-view/: Cargo.toml
database-view/src/: app.rs  db.rs  error.rs  html.rs  lib.rs  main.rs  models.rs
database-view/tests/: db.rs
docs/: check-attack-runbook.md  check-value-compare-template-examples.md  cli-reference.md  execution-report.md  federated-final-plan.md  final-prototype-plan.md  issues-summary.md  multi-node-smpc-setup.md  proof-check-batch-template-examples.md  proof-check-compare-template-examples.md  proof-value-compare-template-examples.md  query-only-attack-methods.md  query-only-reidentification-evaluation-plan.md  query-template-overview.md  raw-vs-federated-template-comparisons.md  three-node-runbook.md  value-preservation.md
input/: Aaron697_Reichel38_a9b5c4ea-a3bc-cb86-2ec6-41fcfe411ef2.json  Abby752_Schneider199_4bd027d4-2901-1eff-a9b9-5c2612d7a856.json  Abdul218_Armstrong51_48f607c5-d093-2580-c858-e43f0494d35f.json  Abdul218_Graham902_bb7aec23-4100-e2f1-6491-4e0011d70bee.json  Abdul218_Greenfelder433_8062a8dc-f2c3-e8be-c820-b2b13364a118.json  Abdul218_Legros616_62cbaacb-09ad-eb55-33aa-66046c8abc53.json  Abdul218_Wilderman619_11770512-6cd9-798e-bde9-fa915f2cd9b6.json  Abdul218_Ziemann98_efed82de-1f16-6b92-1d2b-ef3e1abe15ff.json  Abe604_Keeling57_1bbb7d35-b371-4f6a-b488-b90e4adf1fed.json  Abe604_Kilback373_8f2a1ae1-36f1-ee6f-c3c8-aa372a89be62.json  Abraham100_DuBuque211_a7b8d4c5-cc1b-3843-cd8e-ca25ddd739e9.json  Abraham100_Farrell962_2355b19d-57d3-dc10-5b82-e305765151da.json  Abram53_Denesik803_f591628d-ccb3-30cb-548f-e0183edc30f1.json  Abram53_Kuhic920_6095167e-eea1-fe6e-dd3c-3644949454ce.json  Abram53_White193_344323d5-577c-aab9-a70f-61a74d0e4b4d.json  Adalberto916_Gulgowski816_2f524814-6584-2288-f4ab-fe9c4b02b302.json  Adalberto916_Toy286_4a840689-0be7-e089-63cf-88cefdb8a878.json  Adaline602_Bernhard322_d188f12c-ee94-3432-514b-0d0cf66ac8b8.json  Adaline602_Konopelski743_c72bd619-0675-c591-a166-32bfab406b8f.json  Adam631_Considine820_30d3411b-0a8e-d1e7-813f-81b29c0053ff.json  Adan632_Little434_bccc0ec6-aba5-b49a-c842-befcd738be5c.json  Adan632_Mueller846_4001d0a9-c214-592d-1d9b-cd75288b06e3.json  Adela471_Fernández399_b2854853-f875-bc62-00a7-454c020c81b1.json  Adela471_Lourdes258_Orta736_6fb248be-c5a0-25c8-28d1-8657dff106a2.json  Adela471_Magaña874_016f21f9-9d1a-3501-7a83-770b8b5ef789.json  Adela471_Marta91_Acosta403_b8a48ae9-f28f-9d65-a3d5-e8e189a186a3.json  Adelaida985_Ciera654_Franecki195_c28dc953-046d-5766-eb94-9dd810c5def6.json  Adelaide981_Carlena776_Abshire638_f6764783-a02b-8062-ddd4-c9ddcea56c41.json  Adelaide981_Collette420_Predovic534_a71cf1f6-1c78-8c7b-eaae-141605a4634c.json  Adelaide981_Pfannerstill264_ffc7325d-ca09-f228-0eb6-8746ce3d314b.json  Adelia946_Lueilwitz711_3ae031a0-efa3-4d75-3df4-33fa5ef96266.json  Adelina682_Rodriguez71_eb0e29eb-d4e9-94bb-192c-c361863bd10b.json  Adella39_Felice694_Goodwin327_26ddde5d-fb57-6d49-6fee-a7b497bd73b5.json  Adella39_Malinda718_Kling921_00597eff-a31f-704b-0bc0-0243b460b7d1.json  Adelle43_Oberbrunner298_d3819a4a-2c7a-ab37-45c9-2f5d31dbb330.json  Adena533_Jenniffer979_Wiegand701_f57536c9-4cb5-3bbf-eac7-9b48e3070740.json  Adolfo777_Leuschke194_7ff3fa87-9681-182b-e9e0-a07152efb4d9.json  Adolfo777_Mohr916_25579626-e482-f0e5-4dea-0aac10e9d903.json  Adolph80_Kunde533_fc82a60c-f846-f660-afe6-382ac19c7852.json  (+7644 more)
organize/: Cargo.toml
organize/src/: lib.rs  main.rs
organize/src/commands/: mod.rs  partition.rs
organize/src/commands/query/: mod.rs  new.rs  templates.rs
organize/tests/: partition.rs  query_generation.rs  query_helpers.rs
proof-check/: Cargo.toml
proof-value/: Cargo.toml
proof-value/src/: compare.rs  insights.rs  lib.rs  main.rs  models.rs
proof-value/src/baseline/: build.rs  prepare.rs  resolve.rs
proof-value/src/batch/: aggregate.rs  mod.rs  runner.rs
proof-value/src/report/: mod.rs
proof-value/src/utility/: seeds.rs
proof-value/tests/: batch.rs  compare.rs  insights.rs  prepare.rs  reporting.rs  utility.rs
proof-value/tests/common/: mod.rs
refinery-check/: Cargo.toml
refinery-check/src/: lib.rs  main.rs
refinery-node/: Cargo.toml
refinery-node/src/: app.rs  config.rs  db.rs  federation_jobs.rs  fhir.rs  ingest.rs  lib.rs  local_policy.rs  main.rs  materialize.rs  normalize.rs  privacy.rs  query.rs  server.rs  smpc.rs
refinery-node/src/config/: ingest_settings.rs  mod.rs
refinery-node/src/federation/: jobs.rs  mod.rs  server.rs  smpc.rs
refinery-node/src/ingest/: bronze.rs  fresh.rs  incremental.rs  shared.rs  tests.rs
refinery-node/src/query/: cohort.rs  effects.rs  filters.rs  mod.rs  shared.rs  signals.rs  time_to_event.rs
refinery-node/tests/: config.rs  db.rs  db_init.rs  federation.rs  federation_jobs.rs  federation_smpc.rs  pipeline_ingest.rs  privacy.rs
refinery-orchestrator/: Cargo.toml
refinery-orchestrator/src/: admission.rs  aggregate.rs  client.rs  config.rs  db.rs  dp_release.rs  jobs.rs  lib.rs  main.rs  protocol_runner.rs  run_output.rs  smpc.rs
refinery-orchestrator/src/federation/: aggregate.rs  client.rs  jobs.rs  mod.rs  protocol_runner.rs  run_output.rs  smpc.rs
refinery-orchestrator/src/ledger/: mod.rs
refinery-orchestrator/tests/: admission.rs  aggregate.rs  dp_release.rs  ledger.rs
refinery-orchestrator/tests/common/: mod.rs
refinery-protocol/: Cargo.toml  build.rs
refinery-protocol/proto/: refinery.proto
refinery-protocol/src/: dp.rs  env_utils.rs  errors.rs  federation.rs  lib.rs  query.rs  release.rs  slot_vector.rs  smpc.rs  stats.rs
refinery-protocol/src/stats/: encoding.rs  grouped.rs  helpers.rs  scalar.rs
refinery-protocol/tests/: dp.rs  release.rs  smpc.rs  stats.rs
src/: config.rs  (+8 more)
(+588 files in other folders)
