[package]
name = "refinery_node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["clock"] }
clap = { version = "4.5.60", features = ["derive"] }
dotenvy = "0.15.7"
duckdb = { version = "1.4.4", features = ["bundled"] }
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
walkdir = "2.5.0"
