[workspace]
members = [
    "refinery-node",
    "refinery-orchestrator",
    "refinery-protocol",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["clock"] }
clap = { version = "4.5.60", features = ["derive"] }
dotenvy = "0.15.7"
duckdb = { version = "1.4.4", features = ["bundled"] }
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
prost = "0.13.5"
protoc-bin-vendored = "3.2.0"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tonic = { version = "0.12.3", features = ["transport", "tls"] }
tonic-build = "0.12.3"
walkdir = "2.5.0"
