[package]
name = "database-view"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.7.9"
chrono.workspace = true
clap.workspace = true
duckdb.workspace = true
serde.workspace = true
serde_urlencoded = "0.7.1"
tokio = { workspace = true, features = ["net"] }
walkdir.workspace = true
