[package]
name = "proof-value"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
duckdb.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
cli-render = { path = "../cli-render" }
refinery-node = { path = "../refinery-node" }
refinery-orchestrator = { path = "../refinery-orchestrator" }
refinery-protocol = { path = "../refinery-protocol" }
