[package]
name = "refinery-node"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crypto_box.workspace = true
dotenvy.workspace = true
duckdb.workspace = true
hex.workspace = true
hmac.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tonic.workspace = true
walkdir.workspace = true
zeroize.workspace = true
cli-render = { path = "../cli-render" }
refinery-protocol = { path = "../refinery-protocol" }
