[package]
name = "refinery-protocol"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-build.workspace = true
