[package]
name = "refinery-protocol"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crypto_box.workspace = true
hex.workspace = true
prost.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tonic.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-build.workspace = true
